--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES
         main.c
         src/ft_atoi.c
         src/ft_bzero.c
-        src/ft_calloc.c
+        src/memory/ft_calloc.c
         src/ft_isalnum.c
         src/ft_isalpha.c
         src/ft_isascii.c
@@ -17,44 +17,44 @@ set(SOURCE_FILES
         src/ft_isspace.c
         src/ft_isupper.c
         src/ft_itoa.c
-        src/ft_lstadd_back.c
-        src/ft_lstadd_front.c
-        src/ft_lstclear.c
-        src/ft_lstdelone.c
-        src/ft_lstiter.c
-        src/ft_lstlast.c
-        src/ft_lstmap.c
-        src/ft_lstnew.c
-        src/ft_lstsize.c
-        src/ft_memchr.c
-        src/ft_memcmp.c
-        src/ft_memcpy.c
-        src/ft_memmove.c
-        src/ft_memset.c
+        src/chain/ft_lstadd_back.c
+        src/chain/ft_lstadd_front.c
+        src/chain/ft_lstclear.c
+        src/chain/ft_lstdelone.c
+        src/chain/ft_lstiter.c
+        src/chain/ft_lstlast.c
+        src/chain/ft_lstmap.c
+        src/chain/ft_lstnew.c
+        src/chain/ft_lstsize.c
+        src/memory/ft_memchr.c
+        src/memory/ft_memcmp.c
+        src/memory/ft_memcpy.c
+        src/memory/ft_memmove.c
+        src/memory/ft_memset.c
         src/ft_nbrlen.c
-        src/ft_putchar_fd.c
-        src/ft_putendl_fd.c
-        src/ft_putlnbr_fd.c
-        src/ft_putnbr_base_fd.c
-        src/ft_putnbr_fd.c
-        src/ft_putstr_fd.c
+        src/display/ft_putchar_fd.c
+        src/display/ft_putendl_fd.c
+        src/display/ft_putlnbr_fd.c
+        src/display/ft_putnbr_base_fd.c
+        src/display/ft_putnbr_fd.c
+        src/display/ft_putstr_fd.c
         src/ft_split.c
-        src/ft_str_count_char.c
-        src/ft_str_count_chars.c
-        src/ft_strchr.c
-        src/ft_strcmp.c
-        src/ft_strdup.c
-        src/ft_striteri.c
-        src/ft_strjoin.c
-        src/ft_strlcat.c
-        src/ft_strlcpy.c
-        src/ft_strlen.c
-        src/ft_strmapi.c
-        src/ft_strncmp.c
-        src/ft_strnstr.c
-        src/ft_strrchr.c
-        src/ft_strtrim.c
-        src/ft_substr.c
+        src/string/ft_str_count_char.c
+        src/string/ft_str_count_chars.c
+        src/string/ft_strchr.c
+        src/string/ft_strcmp.c
+        src/string/ft_strdup.c
+        src/string/ft_striteri.c
+        src/string/ft_strjoin.c
+        src/string/ft_strlcat.c
+        src/string/ft_strlcpy.c
+        src/string/ft_strlen.c
+        src/string/ft_strmapi.c
+        src/string/ft_strncmp.c
+        src/string/ft_strnstr.c
+        src/string/ft_strrchr.c
+        src/string/ft_strtrim.c
+        src/string/ft_substr.c
         src/ft_tolower.c
         src/ft_toupper.c
 )
