--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28.0)
+cmake_minimum_required(VERSION 3.27.0)
 
 # Nom du projet
 project(libft C)
@@ -12,7 +12,7 @@ set(SRCS
         ${SRC_PATH}/ft_isalpha.c ${SRC_PATH}/ft_isdigit.c ${SRC_PATH}/ft_isalnum.c ${SRC_PATH}/ft_isascii.c ${SRC_PATH}/ft_isprint.c
         ${SRC_PATH}/ft_strlen.c ${SRC_PATH}/ft_memset.c ${SRC_PATH}/ft_bzero.c ${SRC_PATH}/ft_memcpy.c ${SRC_PATH}/ft_memmove.c
         ${SRC_PATH}/ft_strlcpy.c ${SRC_PATH}/ft_strlcat.c ${SRC_PATH}/ft_toupper.c ${SRC_PATH}/ft_isupper.c ${SRC_PATH}/ft_islower.c
-        ${SRC_PATH}/ft_tolower.c ${SRC_PATH}/ft_strchr.c ${SRC_PATH}/ft_strrchr.c ${SRC_PATH}/ft_strcmp.c ${SRC_PATH}/ft_strncmp.c
+        ${SRC_PATH}/ft_tolower.c ${SRC_PATH}/ft_strchr.c ${SRC_PATH}/ft_strrchr.c ${SRC_PATH}/ft_strreplace.c ${SRC_PATH}/ft_strcmp.c ${SRC_PATH}/ft_strncmp.c
         ${SRC_PATH}/ft_memchr.c ${SRC_PATH}/ft_memcmp.c ${SRC_PATH}/ft_strnstr.c ${SRC_PATH}/ft_atoi.c ${SRC_PATH}/ft_isspace.c
         ${SRC_PATH}/ft_substr.c ${SRC_PATH}/ft_strjoin.c ${SRC_PATH}/ft_strjoin_list.c ${SRC_PATH}/ft_charjoin.c ${SRC_PATH}/ft_strtrim.c ${SRC_PATH}/ft_split.c ${SRC_PATH}/ft_str_count_char.c
         ${SRC_PATH}/ft_str_count_chars.c ${SRC_PATH}/ft_nbrlen.c ${SRC_PATH}/ft_itoa.c ${SRC_PATH}/ft_setitoa.c ${SRC_PATH}/ft_dtoa.c ${SRC_PATH}/ft_setdtoa.c ${SRC_PATH}/ft_strmapi.c ${SRC_PATH}/ft_striteri.c
